--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,14 @@
   pointer-events: none;
 }
 
+.nav-bar{
+  display: flex;
+  justify-content: space-between;
+  padding: "0px 30px 0px 30px ";
+  height:"100px",
+}
+         
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
